jsonschemadsl2ecore.trafo.opt/test/test84/validtests/example10.test84
{
	"123":123,
	"$33":33,
	"-&$#":false,
	"a-b$":{},
	"##":{
		"PP_":"something",
		"PP_-a":"something 2"
	}
}  