jsonschemadsl2ecore.trafo.opt/test/test84/invalidtests/example8.test84
{
	"123":123,
	"$33":33,
	"-&$#":false,
	"a-b$":{},
	"##":{
		"PP_":false
	}
}